# pdoctest

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.circleci/: config.yml
dev_docs/: index.html  pdoctest.html  search.js  tests.html
dev_docs/pdoctest/: commands.html
dev_docs/tests/: test__main__.html  test_commands.html
src/pdoctest/: __init__.py  commands.py
tests/: __init__.py  test__main__.py  test_commands.py
