[tool.poetry]
name = "pdoctest"
version = "0.1.0"
description = ""
authors = ["emsl <@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pdoctest", from = "src"}]


# declares name of CLI app and where the insertion point is
[tool.poetry.scripts]
pdoctest = "pdoctest.commands:app"


[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
ruff = "^0.0.286"
black = "^23.7.0"
isort = "^5.12.0"
pdoc = "^14.0.0"
pylint = "^2.17.5"
pyright = "^1.1.325"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
# compatibility with Black formatter
profile = "black"


# # example repo-wide pylint disablement section
# [tool.pylint]
# disable = [
#     "C0303",  # trailing-whitespace
#     "R0903",  # too-few-public-methods
# ]

[tool.pylint.format]
# line length to match Black formatter
max-line-length = "88"


[tool.pyright]
include = ["src"]
exclude = [".venv",
    "src/experimental",
    "src/typestubs",
  "**/__pycache__"
]
# utilizing the fact that we've set Poetry `virtualenv.in-project` to true
venvPath = "."
venv = ".venv"

typeCheckingMode = "basic"  # "off", "basic", "strict"
reportMissingImports = true
reportMissingTypeStubs = true

executionEnvironments = [
  { root = "src" }
]


[tool.pytest.ini_options]
# adds the following paths to pythonpath, specified relative to root dir
addopts = "--doctest-modules"
pythonpath = [
    "src",
]
